--- a/index.html
+++ b/index.html
@@ -25,6 +25,40 @@
     />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
+  <nav id="navigation" class="navbar navbar-expand-lg">
+    <a class="navbar-brand" href="#"></a>
+
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-toggle="collapse"
+      data-target="#navbarNav"
+      aria-controls="navbarNav"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="#about"
+            >About<span class="sr-only">(current)</span></a
+          >
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#skills">Skills</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#stats">Stats</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#contact">Contact</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
   <body>
     <div class="loader">
       <div class="inner"></div>
@@ -52,40 +86,7 @@
       </nav>
     </div>
 
-    <nav id="navigation" class="navbar navbar-expand-lg">
-      <a class="navbar-brand" href="#">Welcome</a>
-
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarNav"
-        aria-controls="navbarNav"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="#about"
-              >About<span class="sr-only">(current)</span></a
-            >
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#skills">Skills</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#stats">Stats</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#contact">Contact</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+  
 
     <div id="about" class="section">
       <div class="container">
@@ -95,9 +96,9 @@
           </div>
 
           <div class="col-md-7">
-            <h4>My name is WAJDI DOUIRI</h4>
+            <!-- <h4>My name is WAJDI DOUIRI</h4> -->
             <p>
-              Hi There I'm Wajdi Douiri from Tunisia, I'm a self-taught
+              My name is Wajdi Douiri from Tunisia, I'm a self-taught
               FullStack javascript web developer. I work mainly with React.js
               and Node.js. formerly a Networking Tech , Yet I found my passion
               in web development, I can create web sites (static or
@@ -118,8 +119,8 @@
           </div>
           <div class="owl-carousel owl-theme">
             <div class="skill">
-              <span class="chart" data-percent="78">
-                <span class="percent">58</span>
+              <span class="chart" data-percent="80">
+                <span class="percent">80</span>
                 <canvas height="152" width="152"></canvas>
               </span>
               <h4>Js</h4>
@@ -151,7 +152,7 @@
             </div>
             <div class="skill">
               <span class="chart" data-percent="75">
-                <span class="percent">85</span>
+                <span class="percent">70</span>
                 <canvas height="152" width="152"></canvas>
               </span>
               <h4>Nodejs</h4>
@@ -199,10 +200,10 @@
             </div>
             <div class="skill">
               <span class="chart" data-percent="60">
-                <span class="percent">85</span>
+                <span class="percent">60</span>
                 <canvas height="152" width="152"></canvas>
               </span>
-              <h4>jquery</h4>
+              <h4>MongoDB</h4>
               <p></p>
             </div>
           </div>
@@ -286,14 +287,14 @@
             <h1>PORTFOLIO</h1>
           </div>
 
-          <div class="filter">
+          <!-- <div class="filter">
             <ul id="filters">
               <li><a href="#" data-filter="*" class="current">ALL</a></li>
               <li><a href="#" data-filter=".apps">Apps</a></li>
               <li><a href="#" data-filter=".me">Me</a></li>
               <li><a href="#" data-filter=".websites">Websites</a></li>
             </ul>
-          </div>
+          </div> -->
 
           <div class="itemsContainer">
             <ul class="items">
@@ -311,7 +312,7 @@
                       title="View image"
                       class="openButton"
                       data-fancybox
-                      data-caption="fancy dog"
+                      data-caption="E-commerce"
                     >
                       <i class="fa fa-search"></i>
                     </a>
@@ -329,7 +330,7 @@
               </li>
 
               <li
-                class="websites col-xs-6 col-sm-4 col-md-3 col-lg-3"
+                class="Apps col-xs-6 col-sm-4 col-md-3 col-lg-3"
                 onclick=""
               >
                 <div class="item">
@@ -369,7 +370,7 @@
                       title="View image"
                       class="openButton"
                       data-fancybox
-                      data-caption="Expense App"
+                      data-caption="amazon-clone"
                     >
                       <i class="fa fa-search"></i>
                     </a>
@@ -385,201 +386,7 @@
                   <div class="imageOverlay"></div>
                 </div>
               </li>
-              <!-- 
-              <li
-                class="websites col-xs-6 col-sm-4 col-md-3 col-lg-3"
-                onclick=""
-              >
-                <div class="item">
-                  <img src="img/portfolio/thumbnails/dog-square.jpeg" />
-                  <div class="icons">
-                    <a
-                      href="img/portfolio/dog.jpeg"
-                      title="View image"
-                      class="openButton"
-                      data-fancybox
-                      data-caption="Expense App"
-                    >
-                      <i class="fa fa-search"></i>
-                    </a>
-                    <a href="" target="_blank" class="projectLink">
-                      <i class="fa fa-link"></i>
-                    </a>
-                  </div>
-                  <div class="imageOverlay"></div>
-                </div>
-              </li> -->
-              <!-- 
-              <li class="me col-xs-6 col-sm-4 col-md-3 col-lg-3" onclick="">
-                <div class="item">
-                  <img src="img/portfolio/thumbnails/dog-square.jpeg" />
-                  <div class="icons">
-                    <a
-                      href="img/portfolio/dog.jpeg"
-                      title="View image"
-                      class="openButton"
-                      data-fancybox
-                      data-caption="fancy dog"
-                    >
-                      <i class="fa fa-search"></i>
-                    </a>
-                    <a href="" target="_blank" class="projectLink">
-                      <i class="fa fa-link"></i>
-                    </a>
-                  </div>
-                  <div class="imageOverlay"></div>
-                </div>
-              </li>
-
-              <li class="me col-xs-6 col-sm-4 col-md-3 col-lg-3" onclick="">
-                <div class="item">
-                  <img src="img/portfolio/thumbnails/dog-square.jpeg" />
-                  <div class="icons">
-                    <a
-                      href="img/portfolio/dog.jpeg"
-                      title="View image"
-                      class="openButton"
-                      data-fancybox
-                      data-caption="fancy dog"
-                    >
-                      <i class="fa fa-search"></i>
-                    </a>
-                    <a href="" target="_blank" class="projectLink">
-                      <i class="fa fa-link"></i>
-                    </a>
-                  </div>
-                  <div class="imageOverlay"></div>
-                </div>
-              </li>
-
-              <li class="me col-xs-6 col-sm-4 col-md-3 col-lg-3" onclick="">
-                <div class="item">
-                  <img src="img/portfolio/thumbnails/dog-square.jpeg" />
-                  <div class="icons">
-                    <a
-                      href="img/portfolio/dog.jpeg"
-                      title="View image"
-                      class="openButton"
-                      data-fancybox
-                      data-caption="fancy dog"
-                    >
-                      <i class="fa fa-search"></i>
-                    </a>
-                    <a href="" target="_blank" class="projectLink">
-                      <i class="fa fa-link"></i>
-                    </a>
-                  </div>
-                  <div class="imageOverlay"></div>
-                </div>
-              </li>
-
-              <li class="me col-xs-6 col-sm-4 col-md-3 col-lg-3" onclick="">
-                <div class="item">
-                  <img src="img/portfolio/thumbnails/dog-square.jpeg" />
-                  <div class="icons">
-                    <a
-                      href="img/portfolio/dog.jpeg"
-                      title="View image"
-                      class="openButton"
-                      data-fancybox
-                      data-caption="fancy dog"
-                    >
-                      <i class="fa fa-search"></i>
-                    </a>
-                    <a href="" target="_blank" class="projectLink">
-                      <i class="fa fa-link"></i>
-                    </a>
-                  </div>
-                  <div class="imageOverlay"></div>
-                </div>
-              </li> -->
-
-              <!-- <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3" onclick="">
-                <div class="item">
-                  <img src="img/portfolio/thumbnails/dog-square.jpeg" />
-                  <div class="icons">
-                    <a
-                      href="img/portfolio/dog.jpeg"
-                      title="View image"
-                      class="openButton"
-                      data-fancybox
-                      data-caption="fancy dog"
-                    >
-                      <i class="fa fa-search"></i>
-                    </a>
-                    <a href="" target="_blank" class="projectLink">
-                      <i class="fa fa-link"></i>
-                    </a>
-                  </div>
-                  <div class="imageOverlay"></div>
-                </div>
-              </li> -->
-
-              <!-- <li
-                class="websites col-xs-6 col-sm-4 col-md-3 col-lg-3"
-                onclick=""
-              >
-                <div class="item">
-                  <img src="img/portfolio/thumbnails/dog-square.jpeg" />
-                  <div class="icons">
-                    <a
-                      href="img/portfolio/dog.jpeg"
-                      title="View image"
-                      class="openButton"
-                      data-fancybox
-                      data-caption="fancy dog"
-                    >
-                      <i class="fa fa-search"></i>
-                    </a>
-                    <a href="" target="_blank" class="projectLink">
-                      <i class="fa fa-link"></i>
-                    </a>
-                  </div>
-                  <div class="imageOverlay"></div>
-                </div>
-              </li> -->
-
-              <!-- <li class="me col-xs-6 col-sm-4 col-md-3 col-lg-3" onclick="">
-                <div class="item">
-                  <img src="img/portfolio/thumbnails/dog-square.jpeg" />
-                  <div class="icons">
-                    <a
-                      href="img/portfolio/dog.jpeg"
-                      title="View image"
-                      class="openButton"
-                      data-fancybox
-                      data-caption="fancy dog"
-                    >
-                      <i class="fa fa-search"></i>
-                    </a>
-                    <a href="" target="_blank" class="projectLink">
-                      <i class="fa fa-link"></i>
-                    </a>
-                  </div>
-                  <div class="imageOverlay"></div>
-                </div>
-              </li> -->
-
-              <!-- <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3" onclick="">
-                <div class="item">
-                  <img src="img/portfolio/thumbnails/dog-square.jpeg" />
-                  <div class="icons">
-                    <a
-                      href="img/portfolio/dog.jpeg"
-                      title="View image"
-                      class="openButton"
-                      data-fancybox
-                      data-caption="fancy dog"
-                    >
-                      <i class="fa fa-search"></i>
-                    </a>
-                    <a href="" target="_blank" class="projectLink">
-                      <i class="fa fa-link"></i>
-                    </a>
-                  </div>
-                  <div class="imageOverlay"></div>
-                </div>
-              </li> -->
+             
             </ul>
           </div>
         </div>
